fixes alignment issues with dirty check messages
Former-commit-id: e882ad786cda4a35647ca88f8655ce8743df8940

--- a/war/Mat.css
+++ b/war/Mat.css
@@ -1971,10 +1971,7 @@ padding: 2px;
     border-color: #E8EEF7 #E8EEF7 #E8EFF7;
     border-style: solid;
     border-width: 3px;
-    margin-left: -1px;
-   margin-top: -1px;
-    width: 650px;
-    height:150px;
+    height: 150px;
 }
 
 .cellTablePanel_Report {
